--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "11ty-sass-skeleton",
-  "version": "1.2.0",
+  "name": "cursed-horse",
+  "version": "1.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/5t3ph/11ty-sass-skeleton.git"
+    "url": "git+https://github.com/5t3ph/cursed-horse.git"
   },
   "author": "5t3ph",
   "license": "ISC",
